--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <li class="nav-item">
             <a href="">kontakta oss</a>
         </li>
+        <li class="nav-item">
+            <a href="">Ashour</a>
+        </li>
     </ul>
 
    </div>
